--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
 opencv-python==4.4.0.46
 einops
-torchvision
-#torch
-scipy
-pytorch_lightning==1.8.6
-h5py
-thop
+torchvision==0.7.0
+torch==1.6.0
+scipy==1.0.0
+
